--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <figure class="figurePhotoMain">
                 <img class="my-photo" id="minha_foto" src="my.jpg" alt="foto-Ary-Barbosa">
                 <figcaption>
-                    <h2>Ary Barbosa</h2>
+                    <h2 class="figcaption-my-photo">Ary Barbosa</h2>
                 </figcaption>
             </figure>
             <article class="lado-esquerdo">
