starting friendship with CSS

--- a/index.html
+++ b/index.html
@@ -17,47 +17,49 @@
         </ul>
       </nav>
     </header>
-    <section class="profphoto">
-      <img id="minha_foto" src="./imgs/profilePhoto.jpg" width="200px" alt="minua_foto">
-    </section>
+
+  <main class="corpo">
+        <section class="profphoto">
+          <img id="minha_foto" src="./imgs/profilePhoto.jpg" width="200px" alt="minua_foto">
+        </section>
 
     <div class="lists">
       <h1>Lista de Skils</h1>
-      <table>
-      <tr>
-        <thead><td><tr>Lições Aprendidas</tr><tr>Lições a Aprender</tr></td></thead>
-        
-        <tbody><td>
-          <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Slack</li>
-            <li>Zoom+aspirina</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Empatia</li>
-            <li>Semantic Code</li>
-            <li>Logica de programação</li>
-          </ol>
-        </td>
-        <td>
-          <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsivo</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-          </td>
-          </tr>
-      </tbody>
-    </ul>  
-  </table>
+              <table>
+              <tr>
+                <thead><td><tr>Lições Aprendidas</tr><tr>Lições a Aprender</tr></td></thead>
+                
+                <tbody><td>
+                  <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Slack</li>
+                    <li>Zoom+aspirina</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Empatia</li>
+                    <li>Semantic Code</li>
+                    <li>Logica de programação</li>
+                  </ol>
+                </td>
+                <td>
+                  <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsivo</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>SQL</li>
+                  </td>
+                  </tr>
+              </tbody>
+            </ul>  
+          </table>
     </div>
 
     <div class="artigos">
@@ -72,7 +74,7 @@
       <aside class="lado-esquerdo"> <h2>Artigo #aside</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat sunt consectetur, excepturi odit. Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores voluptatibus, assumenda molestias!
       </aside>
     </div>
-
+  </main>
     <footer id="rodape" class="footer">
       <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank" >@blmarquess</a></span>
     </footer>
