--- a/index.html
+++ b/index.html
@@ -13,32 +13,36 @@
     <header class="header-Title">
         <h1 id="titulo">Projeto 01 - Lessons-Learned</h1>
     </header>
-    </section>
-    <main>
-        <section>
+    <main class="container-Main">
+        <section class="first-section">
             <figure class="figurePhotoMain">
                 <img class="my-photo" id="minha_foto" src="my.jpg" alt="foto-Ary-Barbosa">
                 <figcaption>
                     <h2 class="figcaption-my-photo">Ary Barbosa</h2>
                 </figcaption>
             </figure>
-            <article class="lado-esquerdo">
-                O processo de aprendizado na Trybe está sendo muito satisfatório, a forma como é estruturado o dia, é um
-                fator crucial para o aprendizado. Poder estudar o conteúdo que será abordado no dia, antes da aula,
-                possibilita uma maior absorvição do que é mostrado na aula ao vivo, exercício seguido por monitoria
-                facilita muito na fixação do conteúdo.  Esse conjunto de fatores possibilita no processo de
-                aprendizagem. 
+            <article class="article-txt">
+                <p class="lado-esquerdo">
+                    O processo de aprendizado na Trybe está sendo muito satisfatório, a forma como é estruturado o dia,
+                    é um
+                    fator crucial para o aprendizado. Poder estudar o conteúdo que será abordado no dia, antes da aula,
+                    possibilita uma maior absorvição do que é mostrado na aula ao vivo, exercício seguido por monitoria
+                    facilita muito na fixação do conteúdo.  Esse conjunto de fatores possibilita no processo de
+                    aprendizagem.
+                </p>
             </article>
-            <aside class="lado-direito">
-                Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
-                pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco tempo
-                aprendi muito mais do que parte técnica, relacionada a programação, mas também a me alto programar.
+            <aside class="aside-txt">
+                <p class="lado-direito">
+                    Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
+                    pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco tempo
+                    aprendi muito mais do que parte técnica, relacionada a programação, mas também a me alto programar.
+                </p>
             </aside>
         </section>
-        <section>
-            <p>
-                <h1 class="lessons">Lições</h1>
-            </p>
+        <section class="second-section">
+            <div class="lessons">
+                <h1>Lições</h1>
+            </div>
             <div class="list">
                 <ol id="licoes_aprendidas">
                     <nav>
@@ -46,7 +50,8 @@
                                 Empatia</a></li>
                         <li><a href="https://git-scm.com/" target="_blank">Git</a></li>
                         <li><a href="https://github.com/" target="_blank">Github</a></li>
-                        <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">HTML</a></li>
+                        <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">HTML</a>
+                        </li>
                         <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">CSS</a></li>
                         <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript"
                                 target="_blank">Javascript</a></li>
@@ -64,7 +69,8 @@
                     </li>
                     <li><a href="https://www.w3schools.com/js/js_es6.asp" target="_blank">ES6</a></li>
                     <li><a href="https://pt-br.reactjs.org/" target="_blank">React</a></li>
-                    <li><a href="https://blog.betrybe.com/linguagem-de-programacao/sql/" target="_blank">SQL</a></li>
+                    <li><a href="https://blog.betrybe.com/linguagem-de-programacao/sql/" target="_blank">SQL</a>
+                    </li>
                     <li><a href="https://www.mysql.com/" target="_blank">MySQL</a></li>
                     <li><a href="https://www.mongodb.com/cloud/atlas/lp/try2-hterms?utm_content=controlhterms&utm_source=google&utm_campaign=gs_americas_brazil_search_core_brand_atlas_desktop&utm_term=mongodb&utm_medium=cpc_paid_search&utm_ad=e&utm_ad_campaign_id=12212624308&gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3WmL0aucEirODclcheX93PgdZqkrhRYo31r-TXjNaVMoYacHdvm654aAplhEALw_wcB"
                             target="_blank">MongoDB</a>
