--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="header-Title">
+    <header id="cabecalho" class="header-Title">
         <h1 id="titulo">Projeto 01 - Lessons-Learned</h1>
     </header>
     <main class="container-Main">
