--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Lessons Learned</title>
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Juliana Miranda</h1>
-    </header>     
+    </header>
+    <img src="https://julianamiranda.github.io./eu.jpeg" alt ="minhaFoto"id="minha_foto">     
 </body>
 </html>
