atinge todos os requisitos obrigatorios

--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Lessons Learned - Lucas Bertarelli</title>
-  </head>
-  <body>
-      <header>
-      <div id="cabecalho">
-        <div>
-        <h1 id="titulo">Lessons Learned - Lucas Bertarelli</h1>
-        <nav id="link">
-          <a href="https://github.com/LucasBertarelli" target="blank" >Github</a>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Lessons Learned - Lucas Bertarelli</title>
+</head>
+
+<body>
+  <header>
+    <div id="cabecalho">
+      <h1 id="titulo">Lessons Learned - Lucas Bertarelli</h1>
+      <div id="link">
+        <nav>
+          <a href="#">Home</a>
+          <a href="https://github.com/LucasBertarelli" target="_blank">Github</a>
         </nav>
       </div>
-      </div>
-        <img src="foto.jpg" alt="Foto do Lucas" id="minha_foto">
-      </header>
+    </div>
+  </header>
+  <img src="foto.jpg" alt="Foto do Lucas" id="minha_foto">
+  <div>
+    <div class="lado-esquerdo">
       <section>
-      <p><h2>Lições Aprendidas</h2></p>
-      <ol id="licoes_aprendidas">
+        <p>
+        <h2>Lições Aprendidas</h2>
+        </p>
+        <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Bash</li>
           <li>Terminal</li>
@@ -31,8 +38,10 @@
           <li>HTML Semântico</li>
           <li>JavaScript</li>
         </ol>
-      <p><h3>Lições a aprender</p></h3>
-      <ul id="licoes_a_aprender">
+        <p>
+        <h3>Lições a aprender</p>
+        </h3>
+        <ul id="licoes_a_aprender">
           <li>Aprofundamento em JavaScript</li>
           <li>Logica de programação</li>
           <li>Playground Functions</li>
@@ -43,17 +52,50 @@
           <li>Flexbox</li>
           <li>Responsivo</li>
           <li>JavaScript Assíncrono</li>
-      </ul>
-    </section>
-      <article id="artigo"><p><h3>Como cheguei na Trybe?</h3></p>
-      <p>Tenho 34 anos, sou pai de uma linda menina de 7 anos, chamada Lara.<br> Já trabalhei com muita coisa, e tenho formação em música.<br> Nasci em São Paulo capital, onde vivo até hoje.<br> Há muito tempo tenho sentido vontade de voltar a estudar.<br> E a Trybe surgiu em minha vida no melhor momento.<br> Decidi embarcar nessa e daqui só saio quando o curso terminar!</p></article>
+        </ul>
+      </section>
+    </div>
+    <div class="lado-direito">
+      <article id="artigo">
+        <p>
+        <h3>Como cheguei na Trybe?</h3>
+        </p>
+        <p>Tenho 34 anos, sou pai de uma linda menina de 7 anos, chamada Lara.<br> Já trabalhei com muita coisa, e tenho
+          formação em música.<br> Nasci em São Paulo capital, onde vivo até hoje.<br> Há muito tempo tenho sentido
+          vontade de voltar a estudar.<br> E a Trybe surgiu em minha vida no melhor momento.<br> Decidi embarcar nessa e
+          daqui só saio quando o curso terminar!</p>
+      </article>
       <aside id="aside1">
-        <p><h3>Sobre o meu aprendizado</p></h3>
-        <p>Entrar na Trybe já não foi fácil!<br>A gente fez uma prova de Javascript que pra mim foi super difícil.<br>O curso é bem puxado e a gente tem que estudar muito. Estou aprendendo muita coisa!</p>
+        <p>
+        <h3>Sobre o meu aprendizado</p>
+        </h3>
+        <p>Entrar na Trybe já não foi fácil!<br>A gente fez uma prova de Javascript que pra mim foi super difícil.<br>O
+          curso é bem puxado e a gente tem que estudar muito. Estou aprendendo muita coisa!</p>
       </aside>
-      <footer id="rodape">
-        Espero que tenham gostado!
-      </footer>
-    
-  </body>
+    </div>
+  </div>
+  <p><h4>Quer saber quando começa e termina cada modulo? dá uma olhadinha na tabela:</h4></p>
+  <table border="1">
+    <tr>
+      <td>Módulo</td>
+      <td>Início</td>
+      <td>Término</td>
+    </tr>
+    <tr>
+      <td>Fundamentos</td>
+      <td>Agosto</td>
+      <td>Outubro</td>
+    </tr>
+    <tr>
+      <td>Front End</td>
+      <td>Outubro</td>
+      <td>Dezembro</td>
+    </tr>
+  </table>
+  <footer id="rodape">
+    Site criado por Lucas Bertarelli
+  </footer>
+
+</body>
+
 </html>
