Change 'section - aside'

--- a/index.html
+++ b/index.html
@@ -31,13 +31,17 @@
                     aprendizagem.
                 </p>
             </article>
-            <aside class="aside-txt">
-                <p class="lado-direito">
-                    Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
-                    pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco tempo
-                    aprendi muito mais do que parte técnica, relacionada a programação, mas também a me alto programar.
-                </p>
-            </aside>
+            <section class="aside-section">
+                <aside class="aside-txt">
+                    <p class="lado-direito">
+                        Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
+                        pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco
+                        tempo
+                        aprendi muito mais do que parte técnica, relacionada a programação, mas também a me alto
+                        programar.
+                    </p>
+                </aside>
+            </section>
         </section>
         <section class="second-section">
             <div class="lessons">
