table, main, photo 'n article upgrade

--- a/index.html
+++ b/index.html
@@ -1,82 +1,102 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="style.css">
-    <title>Bruno Marques * Project 01</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="text/css" rel="stylesheet" href="style.css">
+  <title>Bruno Marques * Project 01</title>
 </head>
+
 <body>
-    <header id="cabecalho">
-      <h1 id="titulo">Bruno Marques - Lessons Learned</h1>
-      <nav id="menu" class="navi">
-        <ul class="lista-menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-        </ul>
-      </nav>
-    </header>
+  <header id="cabecalho">
+    <h1 id="titulo">Bruno Marques - Lessons Learned</h1>
+    <nav id="menu" class="navi">
+      <ul class="lista-menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main class="corpo">
-        <section class="profphoto">
-          <img id="minha_foto" src="./imgs/profilePhoto.jpg" width="200px" alt="minua_foto">
-        </section>
+    <section class="profphoto">
+      <img id="minha_foto" src="./imgs/profilePhoto.jpg" width="200px" alt="minua_foto">
+    </section>
 
     <div class="lists">
+      <p>
       <h1>Lista de Skils</h1>
-              <table>
-              <tr>
-                <thead><td><tr>Lições Aprendidas</tr><tr>Lições a Aprender</tr></td></thead>
-                
-                <tbody><td>
-                  <ol id="licoes_aprendidas">
-                    <li>Unix</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Slack</li>
-                    <li>Zoom+aspirina</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Empatia</li>
-                    <li>Semantic Code</li>
-                    <li>Logica de programação</li>
-                  </ol>
-                </td>
-                <td>
-                  <ul id="licoes_a_aprender">
-                    <li>JavaScript</li>
-                    <li>DOM</li>
-                    <li>Forms</li>
-                    <li>CSS Responsivo</li>
-                    <li>ES6</li>
-                    <li>HOF</li>
-                    <li>Unit Tests</li>
-                    <li>React</li>
-                    <li>Node</li>
-                    <li>SQL</li>
-                  </td>
-                  </tr>
-              </tbody>
-            </ul>  
-          </table>
+      <table>
+        <thead>
+          <tr>
+            <th>Lições Aprendidas</th>
+            <th>Lições a Aprender</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Slack</li>
+                <li>Zoom+aspirina</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Empatia</li>
+                <li>Semantic Code</li>
+                <li>Logica de programação</li>
+              </ol>
+            </td>
+
+            <td>
+              <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsivo</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </td>
+          </tr>
+          </ul>
+        </tbody>
+      </table>
+    </p>
     </div>
 
     <div class="artigos">
-      <article >   
+      <article>
+        <section class="lado-direito"></section>
         <h1>sobre seu aprendizado #loremipsum</h1>
-        <section class="lado-direito">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam. Quaerat, laborum.
-          
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt
+          dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam.
+          Quaerat, laborum.Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores
+          voluptatibus, assumenda molestias!
+        </p>
         </section>
 
       </article>
-      <aside class="lado-esquerdo"> <h2>Artigo #aside</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat sunt consectetur, excepturi odit. Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores voluptatibus, assumenda molestias!
+      <aside class="lado-esquerdo">
+        <p>
+        <h2>Artigo #aside</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat
+        sunt consectetur, excepturi odit. 
+        </p>
       </aside>
     </div>
   </main>
-    <footer id="rodape" class="footer">
-      <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank" >@blmarquess</a></span>
-    </footer>
+
+  <footer id="rodape" class="footer">
+    <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank">@blmarquess</a></span>
+  </footer>
 </body>
+
 </html>
