quebrei o articler kkk, agora vamos corrigir :p

--- a/index.html
+++ b/index.html
@@ -75,22 +75,24 @@
     <div class="artigos">
       <article>
         <section class="lado-direito"></section>
-        <h1>sobre seu aprendizado #loremipsum</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt
-          dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam.
-          Quaerat, laborum.Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores
-          voluptatibus, assumenda molestias!
-        </p>
+          <p>
+            <h1>sobre seu aprendizado #loremipsum</h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt
+            dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam.
+            Quaerat, laborum.Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores
+            voluptatibus, assumenda molestias!
+          </p>
         </section>
-
       </article>
+      
       <aside class="lado-esquerdo">
         <p>
-        <h2>Artigo #aside</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat
-        sunt consectetur, excepturi odit. 
+          <h2>Artigo #aside</h2>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat
+          sunt consectetur, excepturi odit. 
         </p>
       </aside>
+
     </div>
   </main>
 
