--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
         <li>10</li>
     </ol>
 
+    <br>
+    <br>
+
+    <p>Lições que desenjo aprender</p>
+    <ul id="licoes_a_aprender">
+
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+    </ul>
+
     </article>
+
+
 </body>
 </html>
