--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="style.css" />
     <title>Lessons Learned</title>
   </head>
+
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Projeto: Lessons Learned | Trybe</h1>
     </header>
-    <main>
-      <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
 
+    <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
+
+    <div class="listas">
       <ol id="licoes_aprendidas">
+        <h3>Lições aprendidas</h3>
         <li>Unix & Bash</li>
         <li>Git & Github</li>
         <li>Github Pages</li>
@@ -28,6 +31,7 @@
       </ol>
 
       <ul id="licoes_a_aprender">
+        <h3>Lições a aprender</h3>
         <li>Javascript</li>
         <li>DOM</li>
         <li>EVentos</li>
@@ -39,11 +43,15 @@
         <li>Metodologias Ágeis</li>
         <li>Testes Automatizados</li>
       </ul>
-
-    </main>
+    </div>
 
     <footer id="rodape">
-      <p>Feito com &#128153; por <a href="https://www.linkedin.com/in/gilson-pinheiro/" target="_blank">Gilson</a></p>
+      <p>
+        Feito com &#128153; por
+        <a href="https://www.linkedin.com/in/gilson-pinheiro/" target="_blank"
+          >Gilson</a
+        >
+      </p>
     </footer>
   </body>
 </html>
