--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <nav>
         <a href="https://github.com/julianamiranda/julianamiranda.github.io" target="_blank">GitHub</a>
     </nav>
-
-    <article>
+    
     <p>Lições Aprendidas</p>
     <ol id="licoes_aprendidas">
 
@@ -41,9 +40,6 @@
         <li>9</li>
         <li>10</li>
     </ol>
-
-    <br>
-    <br>
 
     <p>Lições que desejo aprender</p>
     <ul id="licoes_a_aprender">
@@ -60,7 +56,10 @@
         <li>10</li>
     </ul>
 
+    <article>
+        <p>Eu ingressei na Trybe com o intuito de me especializar em desenvolvimento, pois já tinha conhecimento de programação e já tinha atuado brevemente na área. Até o momento, posso dizer que tem sido muito enriquecedor estar tendo essa oportunidade, eu nunca tinha utilizado o Git, na realidade eu nem sabia a importância do GitHub, apesar de já conhecer a plataforma. Espero continuar essa jornada até o fim e ser mais um caso de sucesso.</p>
     </article>
+
     <footer id="rodape"></footer>
 
 
