--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
 
     <div class="listas">
-      <ol id="licoes_aprendidas">
+      <ol id="licoes_aprendidas" class="lists">
         <h3>Lições aprendidas</h3>
         <li>Unix & Bash</li>
         <li>Git & Github</li>
@@ -30,7 +30,7 @@
         <li>Slack</li>
       </ol>
 
-      <ul id="licoes_a_aprender">
+      <ul id="licoes_a_aprender" class="lists">
         <h3>Lições a aprender</h3>
         <li>Javascript</li>
         <li>DOM</li>
@@ -44,6 +44,16 @@
         <li>Testes Automatizados</li>
       </ul>
     </div>
+
+    <article>
+      <h3>A estrada até aqui</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce maximus lacinia euismod. Aliquam lectus dolor, pellentesque id eleifend ut, interdum a quam. Phasellus et dolor mollis, tincidunt nibh sit amet, facilisis lorem. Proin pulvinar urna dolor, a aliquet dui rutrum ut. Etiam vitae odio et et.</p>
+    </article>
+
+    <aside>
+      <h3>[Passagem]</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis tincidunt purus sed tellus.</p>
+    </aside>
 
     <footer id="rodape">
       <p>
