--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
     </ul>
 
     <article>
-        <p>Eu ingressei na Trybe com o intuito de me especializar em desenvolvimento, pois já tinha conhecimento de programação e já tinha atuado brevemente na área. Até o momento, posso dizer que tem sido muito enriquecedor estar tendo essa oportunidade, eu nunca tinha utilizado o Git, na realidade eu nem sabia a importância do GitHub, apesar de já conhecer a plataforma. Espero continuar essa jornada até o fim e ser mais um caso de sucesso.</p>
+        <p>
+            Eu ingressei na Trybe com o intuito de me especializar em desenvolvimento, pois já tinha conhecimento de programação e já tinha atuado brevemente na área. Até o momento, posso dizer que tem sido muito enriquecedor estar tendo essa oportunidade, eu nunca tinha utilizado o Git, na realidade eu nem sabia a importância do GitHub, apesar de já conhecer a plataforma. Espero continuar essa jornada até o fim e ser mais um caso de sucesso.
+        </p>
     </article>
+    <aside>
+        <p>
+            Os conhecimentos adquiridos até o momentos tem sido muito interessantes, tanto os técnicos quando os compartilhados nos momentos de soft skills. Procuro seguir o plano de estudo e procurar outras fontes de estudo diariamente.
+        </p>
+    </aside>
 
     <footer id="rodape"></footer>
 
