--- a/index.html
+++ b/index.html
@@ -25,37 +25,37 @@
     <nav>
         <a href="https://github.com/julianamiranda/julianamiranda.github.io" target="_blank">GitHub</a>
     </nav>
+    <section>
+        <p>Lições Aprendidas</p>
+        <ol id="licoes_aprendidas">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li>10</li>
+        </ol>
     
-    <p>Lições Aprendidas</p>
-    <ol id="licoes_aprendidas">
+        <p>Lições que desejo aprender</p>
+        <ul id="licoes_a_aprender">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li>10</li>
+        </ul>
 
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-        <li>10</li>
-    </ol>
-
-    <p>Lições que desejo aprender</p>
-    <ul id="licoes_a_aprender">
-
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-        <li>10</li>
-    </ul>
-
+    </section>
+    
     <article>
         <p>
             Eu ingressei na Trybe com o intuito de me especializar em desenvolvimento, pois já tinha conhecimento de programação e já tinha atuado brevemente na área. Até o momento, posso dizer que tem sido muito enriquecedor estar tendo essa oportunidade, eu nunca tinha utilizado o Git, na realidade eu nem sabia a importância do GitHub, apesar de já conhecer a plataforma. Espero continuar essa jornada até o fim e ser mais um caso de sucesso.
