--- a/index.html
+++ b/index.html
@@ -98,6 +98,27 @@
             <a href="https://www.linkedin.com/in/aryherton-dos-santos-barbosa-202441b8/" target="_blank"><img
                     src="i490027.jpeg" alt="linkedin"></a>
         </div>
+        <div class="calendar">
+            <table class="tb-rodape">
+                <caption>Agosto-2021</caption>
+                <thead>
+                    <tr>
+                        <th class="th-calendario">Calendário-Trybe</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="day-week">Segunda</td>
+                        <td class="day-week">Terça</td>
+                        <td class="day-week">Quarta</td>
+                        <td class="day-week">Quinta</td>
+                        <td class="day-week">Sexta</td>
+                        <td class="day-week">Sábado</td>
+                        <td class="day-week">Domíngo</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </footer>
 </body>
 
