change in txt - tag > article

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     é um
                     fator crucial para o aprendizado. Poder estudar o conteúdo que será abordado no dia, antes da aula,
                     possibilita uma maior absorvição do que é mostrado na aula ao vivo, exercício seguido por monitoria
-                    facilita muito na fixação do conteúdo.  Esse conjunto de fatores possibilita no processo de
+                    facilita muito na fixação do conteúdo.  Esse conjunto de fatores favorecem no processo de
                     aprendizagem.
                 </p>
             </article>
