change - txt - tag <aside>

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
                         pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco
                         tempo
-                        aprendi muito mais do que parte técnica, relacionada a programação, mas também a me alto
+                        aprendi muito mais do que parte técnica, relacionada a programação, mas também a me auto
                         programar.
                     </p>
                 </aside>
