--- a/index.html
+++ b/index.html
@@ -21,11 +21,27 @@
     
     <br>
     <br>
-
-    <nav>
-        <a href="https://github.com/julianamiranda/julianamiranda.github.io" target="_blank">GitHub</a>
-    </nav>
+   
     <section>
+
+        <table>
+            <tr>
+                <td>
+                    <nav>
+                        <a href="https://github.com/julianamiranda/julianamiranda.github.io" target="_blank">GitHub</a>
+                    </nav>
+                </td>
+                <td></td>
+                <td>
+                    <nav>
+                        <a href="https://www.linkedin.com/in/julianamirandams/" target="_blank">LinkedIn</a>
+                    </nav>
+                </td>
+
+            </tr>
+        </table>
+
+
         <p>Lições Aprendidas</p>
         <ol id="licoes_aprendidas">
             <li>1</li>
@@ -55,7 +71,7 @@
         </ul>
 
     </section>
-    
+
     <article>
         <p>
             Eu ingressei na Trybe com o intuito de me especializar em desenvolvimento, pois já tinha conhecimento de programação e já tinha atuado brevemente na área. Até o momento, posso dizer que tem sido muito enriquecedor estar tendo essa oportunidade, eu nunca tinha utilizado o Git, na realidade eu nem sabia a importância do GitHub, apesar de já conhecer a plataforma. Espero continuar essa jornada até o fim e ser mais um caso de sucesso.
