--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Lições aprendidas</title>
   </head>
   <body>
     <header id="cabecalho">
@@ -17,9 +17,11 @@
           <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
           <li><a href="#artigo_principal">Minha jornada</a></li>
           <li><a href="#fun_fact">Fun fact!</a></li>
-          <a target="_blank" href="https://israelss.github.io"
-            >Visite meu site (new window)</a
-          >
+          <a class="external-link" target="_blank" href="https://israelss.github.io">
+            <!-- Don't remember exactly where I get the idea of using .screen-reader-only... -->
+            Visite meu site
+            <span class="screen-reader-only">(new window)</span>
+          </a>
         </ul>
       </nav>
     </header>
@@ -62,65 +64,70 @@
           </ul>
         </div>
       </header>
-      <article id="artigo_principal"  class="lado-esquerdo">
-        <header><h2>Minha jornada na Trybe</h2></header>
-        <section>
-          <p>
-            Quando entrei na Trybe não imaginava que aprenderia
-            <strong>tanto</strong> em tão pouco tempo! Não só habilidades
-            técnicas (<em>hard skills</em>), mas também habilidades
-            sócio-emocionais (<em>soft skills</em>) têm sido trabalhadas todos
-            os dias de forma muito bem integrada, levando ao crescimento
-            orgânico como profissional completo!
-          </p>
+      <section class="article-section">
+        <article id="artigo_principal" class="lado-esquerdo">
+          <header>
+            <h2>Minha jornada na Trybe</h2>
+          </header>
+          <section>
+            <p>
+              Quando entrei na Trybe não imaginava que aprenderia
+              <strong>tanto</strong> em tão pouco tempo! Não só habilidades
+              técnicas (<em>hard skills</em>), mas também habilidades
+              sócio-emocionais (<em>soft skills</em>) têm sido trabalhadas todos
+              os dias de forma muito bem integrada, levando ao crescimento
+              orgânico como profissional completo!
+            </p>
+          </section>
+        </article>
+        <section class="lado-direito">
+          <table>
+            <caption>
+              Um comando novo para o arsenal
+            </caption>
+            <thead>
+              <tr>
+                <th colspan="2">Apropos</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Pra que serve:</td>
+                <td>pesquisa por nomes e descrições de páginas de manual</td>
+              </tr>
+              <tr>
+                <td>Sintaxe:</td>
+                <td>
+                  <code>
+                    apropos [-dalv?V] [-e|-w|-r] [-s lista] [-m
+                    sistema[,...]]<br />
+                    [-M caminho] [-L localidade] [-C arquivo] palavra-chave ...
+                  </code>
+                </td>
+              </tr>
+              <tr>
+                <td>Pode ser substituído por:</td>
+                <td><code>man -k</code></td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="2">Fonte: <code>man apropos</code></td>
+              </tr>
+            </tfoot>
+          </table>
+          <aside id="fun_fact">
+            <h2>Fun fact!</h2>
+            <p>
+              Mesmo já possuindo algum conhecimento em programação, estou
+              aprendendo algo novo a cada dia. Como o comando
+              <code>apropos</code>.
+            </p>
+          </aside>
         </section>
-      </article>
-      <section class="lado-direito">
-        <table>
-          <caption>
-            Um comando novo para o arsenal
-          </caption>
-          <thead>
-            <tr>
-              <th colspan="2">Apropos</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Pra que serve:</td>
-              <td>pesquisa por nomes e descrições de páginas de manual</td>
-            </tr>
-            <tr>
-              <td>Sintaxe:</td>
-              <td>
-                <code
-                  >apropos [-dalv?V] [-e|-w|-r] [-s lista] [-m sistema[,...]]<br />
-                  [-M caminho] [-L localidade] [-C arquivo] palavra-chave ...
-                </code>
-              </td>
-            </tr>
-            <tr>
-              <td>Pode ser substituído por:</td>
-              <td><code>man -k</code></td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <td colspan="2">Fonte: <code>man apropos</code></td>
-            </tr>
-          </tfoot>
-        </table>
-            <aside id="fun_fact">
-        <h2>Fun fact!</h2>
-        <p>
-          Mesmo já possuindo algum conhecimento em programação, estou aprendendo
-          algo novo a cada dia. Como o comando <code>apropos</code>.
-        </p>
-            </aside>
       </section>
     </main>
 
-      
     <footer id="rodape">
       <p>Feito por Israel Sant'Anna, 2021</p>
     </footer>
