requisitos corrigidos, css em construçao

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     </div>
 
     <div class="artigos">
+      <div class="lado-esquerdo">
       <article>
-        <section class="lado-direito"></section>
+        <section class="lado-esquerdo"></section>
           <p>
             <h1>sobre seu aprendizado #loremipsum</h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt
@@ -84,15 +85,16 @@
           </p>
         </section>
       </article>
-      
-      <aside class="lado-esquerdo">
+    </div>
+      <div class="lado-direito">
+      <aside class="lado-direito">
         <p>
           <h2>Artigo #aside</h2>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat
           sunt consectetur, excepturi odit. 
         </p>
       </aside>
-
+      </div>
     </div>
   </main>
 
