add font awesome

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="text/css" rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <title>Bruno Marques * Project 01</title>
 </head>
 
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Bruno Marques - Lessons Learned</h1>
-    <nav id="menu" class="navi">
+    <nav id="menu" class="navibar">
       <ul class="lista-menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -97,7 +98,9 @@
       </div>
     </div>
   </main>
+<div class="prefooter">
 
+</div>
   <footer id="rodape" class="footer">
     <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank">@blmarquess</a></span>
   </footer>
