font awersome successfully

--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
           <tr>
             <td>
               <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Slack</li>
-                <li>Zoom+aspirina</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Empatia</li>
-                <li>Semantic Code</li>
-                <li>Logica de programação</li>
+                <li><i class="fab fa-linux"></i> Unix</li>
+                <li><i class="fab fa-git-square"></i> Git</li>
+                <li><i class="fab fa-github"></i> GitHub</li>
+                <li><i class="fab fa-slack"></i> Slack</li>
+                <li><i class="fas fa-video"></i> Zoom+aspirina</li>
+                <li><i class="fab fa-html5"></i> HTML</li>
+                <li><i class="fab fa-css3-alt"></i> CSS</li>
+                <li><i class="fas fa-people-arrows"></i> Empatia</li>
+                <li><i class="fas fa-universal-access"></i> Semantic Code</li>
+                <li><i class="fas fa-clipboard-list"></i> Logica de programação</li>
               </ol>
             </td>
 
             <td>
               <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>DOM</li>
-                <li>Forms</li>
-                <li>CSS Responsivo</li>
-                <li>ES6</li>
-                <li>HOF</li>
-                <li>Unit Tests</li>
-                <li>React</li>
-                <li>Node</li>
-                <li>SQL</li>
+                <li><i class="fab fa-js-square"></i> JavaScript</li>
+                <li><i class="fas fa-file-code"></i> DOM</li>
+                <li><i class="fas fa-align-justify"></i> Forms</li>
+                <li><i class="fab fa-css3"></i> CSS Responsivo</li>
+                <li><i class="fab fa-js-square"></i> ES6</li>
+                <li><i class="fab fa-python"></i> Python</li>
+                <li><i class="fas fa-check-square"></i> Unit Tests</li>
+                <li><i class="fab fa-react"></i> React</li>
+                <li><i class="fab fa-node-js"></i> Node</li>
+                <li><i class="fas fa-database"></i> SQL</li>
             </td>
           </tr>
           </ul>
@@ -102,7 +102,7 @@
 
 </div>
   <footer id="rodape" class="footer">
-    <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank">@blmarquess</a></span>
+    <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank"> <i class="fab fa-github"></i>@BLMARQUESS</a></span>
   </footer>
 </body>
 
