add nav menu styling

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h1 id="titulo">Bruno Marques - Lessons Learned</h1>
     <nav id="menu" class="navibar">
       <ul class="lista-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#"><strong>Home</strong></a></li>
+        <li><a href="#"><strong>About</strong></a></li>
       </ul>
     </nav>
   </header>
