working with footer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 </div>
   <footer id="rodape" class="footer">
-    <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank"> <i class="fab fa-github"></i>@BLMARQUESS</a></span>
+    <span class="by">Trybe learned: <a href="https://github.com/blmarquess" target="_blank"> <i class="fab fa-github"></i> BLMARQUESS</a></span>
   </footer>
 </body>
 
