--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
           <li><a href="#artigo_principal">Minha jornada</a></li>
           <li><a href="#fun_fact">Fun fact!</a></li>
           <a class="external-link" target="_blank" href="https://israelss.github.io">
-            <!-- Don't remember exactly where I get the idea of using .screen-reader-only... -->
+            <!-- I got the idea of using the screen-reader-only class from Jefferson Thierch,
+                 when I reviewed his PR on this same repository:
+                 https://github.com/tryber/sd-016-b-project-lessons-learned/blob/f042e7a5dc35f0c023a42351ec32142fad33791c/index.html#L22
+                 But I used a different approach on css side-->
             Visite meu site
             <span class="screen-reader-only">(new window)</span>
           </a>
