--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<main id="principal">
 			<article  class="lado-esquerdo">
 				<h1 id="estudartrybe">Estudar na Trybe</h1>
-				<p>Como descrever o aprendizado na Trybe? Posso dizer que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!</p><p>E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.</p>
+				<p>Como descrever o aprendizado na Trybe? Posso dizer que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!</p><p>E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em casa.</p>
 			</article>
 			<table border="5" class="lado-direito">
 				<tr>
