--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="listas">
       <ol id="licoes_aprendidas" class="lists">
-        <h3>Lições aprendidas</h3>
+        <h2>Lições aprendidas</h2>
         <li>Unix & Bash</li>
         <li>Git & Github</li>
         <li>Github Pages</li>
@@ -31,7 +31,7 @@
       </ol>
 
       <ul id="licoes_a_aprender" class="lists">
-        <h3>Lições a aprender</h3>
+        <h2>Lições a aprender</h2>
         <li>Javascript</li>
         <li>DOM</li>
         <li>EVentos</li>
@@ -47,13 +47,25 @@
 
     <article>
       <h3>A estrada até aqui</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce maximus lacinia euismod. Aliquam lectus dolor, pellentesque id eleifend ut, interdum a quam. Phasellus et dolor mollis, tincidunt nibh sit amet, facilisis lorem. Proin pulvinar urna dolor, a aliquet dui rutrum ut. Etiam vitae odio et et.</p>
+      <p>
+        Meu aprendizado na Trybe até esse primeiro projeto já tem sido bem
+        intenso, a curva de intensidade depois dos primeros dias é acentuada, e
+        isso me anima muito, pois só confirma que vamos realmente aprender muito
+        aqui. E mais do que aprender a desenvolver, estou aprendendo que posso
+        sim desenvolver minhas soft skills e a grande importância delas para o
+        mercado.
+      </p>
     </article>
 
-    <aside>
-      <h3>[Passagem]</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis tincidunt purus sed tellus.</p>
-    </aside>
+    <section id="passagem">
+      <aside>
+        <p>
+          Eu tinha um certo bloqueio com CSS, e quando o bloco 3 começou já fiquei
+          ansioso. Mas logo percebi que era só um preconceito que adiquiri ao
+          estudar de forma ineficiente no passado.
+        </p>
+      </aside>
+    </section>
 
     <footer id="rodape">
       <p>
